--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netflix-gpt",
+  "name": "cine-gpt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,12 +8,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "openai": "^5.11.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "tailwindcss": "^3.4.17"
   }
 }
